# zephyr

./: .gitignore  CMakeLists.txt  Kconfig.zephyr  download_hex.py  download_hex_916.py  flash_download.ini  west.yml
kernel/: idle.c  init.c  timeout.c
modules/: Kconfig  (+1 more)
samples/application_development/external_ingchips/: CMakeLists.txt  prj.conf
samples/application_development/external_ingchips/mylib/: README.md  flash_download.ini  my_project_noos.ingw  my_project_noos.ld
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/: .gitignore
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/exp/ING9168xx/: apis.json
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/exp/ING9187xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/exp/ING9188xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/exp/inc/: gap.h  ll_api.h  sm.h
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/extension/ING9168xx/: apis.json  meta.json
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/extension/ING9187xx/: apis.json  meta.json  platform.hex  symdefs.g
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/extension/ING9188xx/: apis.json  meta.json  platform.hex  symdefs.g
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/extension/inc/: le_device_db.h  ll_api.h  platform_api.h
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mass_conn/ING9168xx/: meta.json  platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mass_conn/ING9187xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mass_conn/ING9188xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mini/ING9168xx/: apis.json  meta.json  platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mini/ING9187xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mini/ING9188xx/: apis.json  meta.json  platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
samples/application_development/external_ingchips/mylib/ING918XX_SDK_SOURCE/bundles/mini/inc/: btstack_defines.h
samples/application_development/external_ingchips/mylib/data/: setup_soc.cgen
samples/application_development/external_ingchips/mylib/portable/: gen_os_impl.c
samples/application_development/external_ingchips/mylib/src/: main.c  main_shared.c  profile.c  profile.h  uart_console.c  uart_console.h
samples/application_development/external_ingchips/mylib/wizard/cfg/: projects.json  settings.json
samples/application_development/external_ingchips/mylib/wizard/data/: appearance.csv  common.cs  examples.list  gap.list  gatt_services.list  iar.cs  iar.fix  keil.cs  keil.fix  mesh_properties.list  msg_md.txt  nim.fix  segger.fix  series.json  src_copy.list
samples/application_development/external_ingchips/mylib/wizard/data/test/: coremark_918.ini
samples/application_development/external_ingchips/mylib/wizard/templates/common/: {{if git}}.gitignore{{endif}}  {{if iar}}init.mac{{endif}}  {{if iar}}{{proj_name}}.custom_argvars{{endif}}  {{if iar}}{{proj_name}}.ewd{{endif}}  {{if iar}}{{proj_name}}.eww{{endif}}  {{if keil}}{{proj_name}}.uvprojx{{endif}}
samples/application_development/external_ingchips/src/: main_zephyr.c
samples/application_development/external_ingchips_916/: CMakeLists.txt  prj.conf
samples/application_development/external_ingchips_916/mylib/: Makefile  makefile.conf  my_project_noos.elf  my_project_noos.hex
samples/application_development/external_ingchips_916/mylib/ING918XX_SDK_SOURCE/src/Tools/: uart_driver.c
samples/application_development/external_ingchips_916/mylib/data/: setup_soc.cgen
samples/application_development/external_ingchips_916/mylib/portable/: gen_os_impl.c
samples/application_development/external_ingchips_916/mylib/src/: FreeRTOSConfig.h  gstartup_ing91800.s  h4_ingchips.c  hci_uart.c  main.c  main.h  main_shared.c  profile.c  service_console.c
samples/application_development/external_ingchips_916/mylib/wizard/cfg/: user.json
samples/application_development/external_ingchips_916/mylib/wizard/data/: acknowlege  common.fix  company_ids.list  format-types.csv  gcc.cs  gcc.fix  more_tools.json  news.tpl  rowley.cs  rowley.fix  segger.cs  service_class.csv  trace_items.list  update.json
samples/application_development/external_ingchips_916/mylib/wizard/data/sig/: myscript.js  mystyle.css
samples/application_development/external_ingchips_916/mylib/wizard/data/test/: bqb_rf_918.ini  coremark_916.ini  items.json
samples/application_development/external_ingchips_916/mylib/wizard/templates/common/: README.md  flash_download.ini  {{if iar}}generic_cortex.icf{{endif}}  {{if iar}}{{proj_name}}.ewp{{endif}}  {{if keil}}init.ini{{endif}}
samples/application_development/external_ingchips_916/src/: main_zephyr.c
samples/modu_test/frist_module/: CMakeLists.txt  Kconfig  prj.conf
samples/modu_test/frist_module/src/: main.c
(+443 files in other folders)
